--- a/package.json
+++ b/package.json
@@ -1,33 +1,43 @@
 {
   "name": "@teyfix/i18n",
   "type": "module",
+  "exports": {
+    "./server": {
+      "import": "./src/server.tsx",
+      "types": "./src/server.tsx"
+    },
+    "./compiler": {
+      "import": "./src/compiler.ts",
+      "types": "./src/compiler.ts"
+    }
+  },
+  "main": "src/server.tsx",
   "module": "index.ts",
   "dependencies": {
+    "@types/dlv": "^1.1.5",
+    "change-case": "^5.4.4",
+    "consola": "^3.4.2",
     "dlv": "^1.1.3",
     "dset": "^3.1.4",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "glob": "^11.0.3",
+    "merge": "^2.1.1",
+    "prettier": "^3.6.2",
+    "sort-keys": "^6.0.0",
+    "type-fest": "^5.1.0",
+    "yaml": "^2.8.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.1",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
-    "@types/bun": "latest",
-    "@types/dlv": "^1.1.5",
     "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "change-case": "^5.4.4",
-    "consola": "^3.4.2",
-    "glob": "^11.0.3",
     "lefthook": "^2.0.1",
-    "merge": "^2.1.1",
-    "prettier": "^3.6.2",
     "prettier-plugin-packagejson": "^2.5.19",
     "prettier-plugin-sort-json": "^4.1.1",
-    "sort-keys": "^6.0.0",
-    "type-fest": "^5.1.0",
-    "yaml": "^2.8.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "peerDependencies": {
     "typescript": "^5"
