--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@teyfix/next-i18n",
   "type": "module",
   "exports": {
-    "./server": {
-      "import": "./src/server.tsx",
-      "types": "./src/server.tsx"
+    ".": {
+      "import": "./src/index.ts",
+      "types": "./src/index.ts"
     },
     "./compiler": {
       "import": "./src/compiler.ts",
@@ -21,6 +21,7 @@
     "dlv": "^1.1.3",
     "dset": "^3.1.4",
     "glob": "^11.0.3",
+    "klona": "^2.0.6",
     "merge": "^2.1.1",
     "prettier": "^3.6.2",
     "sort-keys": "^6.0.0",
